Wysiwyg: IE fixes for toolbar buckets overflow
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@6649 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/Wysiwyg/fckeditor/editor/plugins/toolbar/toolbar.css
+++ b/extensions/wikia/Wysiwyg/fckeditor/editor/plugins/toolbar/toolbar.css
@@ -121,6 +121,7 @@
 	width: 100px;
 	position: absolute;
 	right: 0;
+	height: 41px;
 }
 
 #fck_toolbar.toolbarSource td.last ul {
